# drafter

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  EVENTS_DESIGN.md  EXAMPLE_TEST_REPORT.md  GEOLOCATION_IMPLEMENTATION.md  GEOLOCATION_QUICKREF.md  IMPLEMENTATION_SUMMARY.md  Justfile  LICENSE.txt  MANIFEST.in  README.md  README_ANALYSIS.md  SUMMARY.md  TESTING-QUICKSTART.md  TESTING-STATUS.md  TESTING-SUMMARY.md  TESTING.md  TEST_IMPLEMENTATION_SUMMARY.md  V2_TODO.md  agents.md  build-upload.bat  change_log.md  contents.html  drafter.py  genindex.html  hatch_build.py  index.html  llm_integration.html  mkdocs.yml  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  ruff.toml  search.html  (+5 more)
.github/workflows/: cdn.yml  docs.yml  qodo.yml  test-example.yml  test_and_lint.yml
_downloads/97f4a836334a303bd7ca08d329d9fe3f/: bank.py
_downloads/b810a7b8039f6ee3810e2d12adff25aa/: store.py
_sources/: contents.rst.txt  index.rst.txt
_sources/examples/: examples.rst.txt  forms.rst.txt  login.rst.txt  ring.rst.txt
_sources/quickstart/: quickstart.rst.txt
_sources/reference/: compatibility.rst.txt  components.rst.txt  flask.rst.txt  fonts.rst.txt  js.rst.txt  local_setup.rst.txt  pillow.rst.txt  reference.rst.txt
_sources/students/: deployment.rst.txt  docs.rst.txt  help.rst.txt  html.rst.txt  installation.rst.txt  styling.rst.txt  testing.rst.txt
_sources/workbook/: index.rst.txt  part1.rst.txt
api/: api.html
cdn/skulpt/: drafter-setup.js  skulpt-drafter-py.js  skulpt-drafter.js  skulpt-stdlib.js  skulpt.js  skulpt.js.map
docs/: CSS_INJECTION.md  IMPLEMENTATION_SUMMARY.md  MONITOR.md  PYODIDE_BRIDGE.md  SECURITY_CSS_INJECTION.md  SHADOW_DOM_ANALYSIS.md  STYLING_CHANGES.md  V2_FEATURES.md  index.md  js_bridge_architecture.md
docs/api/: api.md
docs/examples/: calculator.md  examples.md  forms.md  login.md  nested_data.md  ring.md
docs/quickstart/: quickstart.md
docs/reference/: colors.md  components.md  flask.md  fonts.md
docs/students/: deployment.md  docs.md  help.md  html.md  installation.md  styling.md  testing.md
docs/workbook/: index.md
docsrc/: conf.py  contents.rst  index.rst  llm_integration.rst  llm_prompt_snippet.md  llm_prompt_snippet.rst  storage.md
docsrc/_component_examples/: button_example.py  checkbox_example.py  download_example.py  fileupload_example.py  header_example.py  image_example.py  layout_example.py  link_example.py  list_example.py  plot_example.py  selectbox_example.py  table_example.py  textarea_example.py  textbox_example.py
docsrc/_static/: graphics_source.pptx
docsrc/api/: api.rst
docsrc/cheatsheets/: business-card.rst  full-reference.rst  index.rst  quick-reference.rst
docsrc/reference/: llms.rst  (+5 more)
doctrees/: contents.doctree  environment.pickle  index.doctree
drafter/: __init__.py  __main__.py  assert_page.py  command_line.py  components.py  configuration.py  constants.py  debug.py  deploy.py  files.py  hacks.py  history.py  image_support.py  llm.py  page.py  raw_files.py  routes.py  server.py  setup.py  site_description.py  storage.py  styling.py  testing.py  urls.py
examples/: README_PYODIDE.md  all_forms.py  animations.py  api_explorer_demo.py  audio_demo.py  blank.py  bulleted_list_weirdness.py  button_arguments.py  button_namespacing_demo.py  button_state.py  button_with_spaces.py  calculator.html  calculator.py  calculator_features.py  calculator_two_page.py  circular_reference.py  complex_form.py  cookie_clicker.py  deployed_full_width.py  design_form_example.py  design_landing_page.py  dict_state.py  differently_named_state.py  download_result.py  dumb_cactus.py  duplicate_component_name.py  emoji_selectbox.py  emojis.py  error_link.py  error_missing_page.py  error_non_string_page.py  event_handlers_demo.py  examples.html  file_upload.py  file_upload_testing.py  file_writing.py  forms.html  full_state.py  fun_style.py  geolocation_demo.py  (+44 more)
html/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
js/: jest.config.js  jest.config.json  jest.setup.js  package-lock.json  package.json  postcss.config.cjs  tsconfig.app.json  tsconfig.jest.json  tsconfig.json  tsconfig.tools.json  tsup.config.ts
libs/: diff.css  drafter-llm.js  drafter-setup.js  drafter-storage.js  global.css  global.js  manifest.json  readme.md  skeleton.css  skeleton.min.css
quickstart/: quickstart.html
reference/: colors.html  compatibility.html  components.html  flask.html  fonts.html  js.html  llms.html  local_setup.html  pillow.html  reference.html
students/: deployment.html  docs.html  functions.html  help.html  html.html  installation.html  students.html  styling.html  testing.html
tests/: README.md  conftest.py  helpers.py  requirements-test.txt  test_about_page.py  test_all_examples.py  test_api_explorer.py  test_arguments.py  test_basic_server.py  test_bottle_server.py  test_button_namespacing.py  test_client_library.py  test_client_server.py  test_complex_form.py  test_component_html.py  test_component_spacing.py  test_components.py  test_default_server.py  test_duplicate_names.py  test_emoji_forms.py  test_emoji_params.py  test_file_upload.py  test_integration.py  test_integration_simple.py  test_llm.py  test_main_server_replacement.py  test_monitor.py  test_retry_wrapper.py  test_routes.py  test_row_repr.py  test_selectbox.py  test_simple_server.py  test_site_description.py  test_skeleton_theme.py  test_starlette_server.py  test_storage.py  test_styling.py  test_styling_serialization.py  test_svg_components.py  test_type_describer.py  (+3 more)
tests.test_file_upload/: test_empty_file_upload_bytes-browser.html  test_empty_file_upload_image-browser.html  test_empty_file_upload_str-browser.html  test_multiple_file_uploads_mixed-browser.html  test_optional_file_upload-browser.html
tests.test_update_fragment/: test_fragment_response_from_route-browser.html  test_update_response_from_route-browser.html
tools/: identify_fields.py  rebuild_raw_files.py  test_examples.py
workbook/: index.html  part1.html
(+464 files in other folders)
