[build-system]
requires = ["hatchling", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "drafter"
version = "2.0.0"
description = "Drafter: Python-driven interactive pages via Skulpt + TS"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  # Server
  "jinja2",
  "watchfiles",
  "websockets>=12",
  # CLI Tooling
  "click",
  "rich",
  # Actual library
  "bakery",
  "pillow",
  "matplotlib",
]
[project.scripts]
drafter = "drafter.cli:app"

[project.optional-dependencies]
dev = [
  # Building
  "hatchling",
  "hatch-nodejs-version",
  # Documentation
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "Pygments",
  # Formatting/Linting
  "djlint",
  "mypy",
  "ruff",
  # Tools
  "tqdm",
  "typer",
  # Testing
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "coverage",
  "tox",
]

[tool.hatch.build]
include = ["src/drafter/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/drafter"]
force-include = { "src/drafter/assets" = "drafter/assets" }

[tool.hatch.build.targets.sdist]
# Ensure sdists also contain the assets
include = ["src/drafter/**"]

[tool.hatch.build.hooks.custom]
# A tiny hook that: npm ci && npm run build && copies assets to src/drafter/assets

[tool.black]
line-length = 88
target-version = ['py38']
